=== Opus Primus changelog.txt ===
Last revised September 1, 2014
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.3 ==
* Released ...

= Code =
* Added `post-title-link` wrapper class to better manage Post Title output
* Added WordPress HTML5 markup support for search form, comment form, comment list, and caption
* Create `/lib/` folder to store bundled libraries and ancillary files
* Enqueue JavaScripts and CSS for SlickNav JavaScript plugin integration to handle mobile menus

= CSS =
* Added new typography styles for better reading
* Added styles for the "BNS Login" plugin
* Hide the post/page breadcrumbs in mobile displays
* Removed duplicate definitions from media queries stylesheet
* Updated `editor-style.css` to match new typography of theme
* Updated galleries styles to use HTML5 markup

= JavaScript =
* Integrated "SlickNav" (Created by Josh Cope - @computerwolf) for mobile menu support

= Miscellaneous
* Updated `readme.txt` to note the use and license of SlickNav by Josh Cope

/** ------------------------------------------------------------------------- */
== Version 1.2.5 ==
* Released July 2014

= Code =
* Added new method `OpusPrimusNavigation::pagination` for moving between pages of posts
* Added new method `OpusPrimusNavigation::pagination_wrapped` to provide actions hooks before and after the `pagination` method
* Added `antispambot` email protection to author biography email addresses
* Added sanity checks to ensure widgets are active before rendering sidebars
* Added `opus_primus_defaults.php` to replace `$opus_defaults` class
* Added `opus-primus-ignite.php` to reduce clutter in `functions.php`
* Added `opus_image_link_navigation_output` filter hook to provide access to navigation output
* Added `opus_tagline` to default hidden screen options array
* Adjusted the `OpusPrimusStructures::the_loop` and `OpusPrimusStructures::the_loop_archives` to use the `pagination_wrapped` method